# Docify

./: 2017.csv  README.md  input.docx  pyproject.toml  requirements.txt  setup.py  test2pdf.docx  wordf.docx  wordtest.docx
docify/: cli.py  converters.py  gui.py
p2w_convertor/: cli.py  converters.py  gui.py
tests/: test_converters.py
