[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docify"
version = "0.1.0"
description = "Convert Word, PDF, Excel, and CSV files via CLI or GUI."
authors = [
	{ name = "Mehmood Ul Haq", email = "mehmoodulhaq1040@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"pandas",
	"python-docx",
	"docx2pdf",
	"pdfplumber",
	"openpyxl",
	"pdf2docx",
	"PyQt5"
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
keywords = ["convert", "pdf", "word", "excel", "csv", "cli", "gui"]
urls = {"Homepage" = "https://github.com/mehmoodulhaq570/docify"}
